--- a/Week-2-Solutions.ipynb
+++ b/Week-2-Solutions.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 📚  Exercise Session - Week 2\n",
     "\n",
-    "Welcome to Week 2 exercise's session of CS552-Modern NLP!\n",
+    "Welcome to Week 2 exercise's session of Modern NLP!\n",
     "\n",
     "\n",
     "> **What will be covered:**\n",
