--- a/Week-1-Solutions.ipynb
+++ b/Week-1-Solutions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 📚 Exercise Session - Week 1\n",
     "\n",
-    "Welcome to Week 1 exercise session of **CS-552: Modern NLP**!\n",
+    "Welcome to Week 1 exercise session of ** Modern NLP**!\n",
     "\n",
     "> **What will be covered:**\n",
     "> 1. [**TASK A:** Training a word embedding model](#1)\n",
